--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@babel/core": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
+    "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
@@ -23,6 +24,7 @@
     "gulp-notify": "^4.0.0",
     "gulp-plumber": "^1.2.1",
     "gulp-rename": "^2.0.0",
+    "gulp-replace": "^1.1.4",
     "gulp-sass": "^5.1.0",
     "gulp-sass-glob": "^1.1.0",
     "gulp-server-livereload": "^1.9.2",
@@ -32,7 +34,7 @@
     "gulp-webp-html": "^1.0.2",
     "sass": "^1.69.5",
     "style-loader": "^3.3.3",
-    "gulp-replace": "^1.1.4",
+    "terser-webpack-plugin": "^5.3.9",
     "webpack-stream": "^7.0.0"
   },
   "babel": {
@@ -41,6 +43,7 @@
     ]
   },
   "dependencies": {
+    "@fancyapps/ui": "^5.0.30",
     "swiper": "^11.0.5"
   }
 }
